# jingli-ui-demo

./: .gitignore  README.md  index.html  package-lock.json  package.json  seed_products.json  tsconfig.node.tsbuildinfo
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  graph.py  prompts.py  state.py  tools.py
backend/app/api/: router.py
backend/app/core/: __init__.py  config.py  exceptions.py  security.py  tracing.py
backend/app/db/: __init__.py  session.py
backend/app/llm/: client.py  embedding_client.py  vision_client.py
backend/app/metrics/: __init__.py  collector.py
backend/app/models/: __init__.py  common.py  conversation.py  document.py  eval.py  feedback.py  model_log.py  product.py  user.py
backend/app/rag/: __init__.py  embedder.py  loader.py  prompt_builder.py  reranker.py  retriever.py  splitter.py  store.py
backend/app/repositories/: __init__.py  conversation_repo.py  document_repo.py  gift_list_repo.py  product_repo.py
backend/app/schemas/: chat.py  document.py  eval.py  feedback.py  gift_intent.py  gift_list.py  gift_plan.py  gift_solution.py  health.py  product.py  recommendation.py  recommendation_score.py  seed_product.py
backend/app/scripts/: validate_products.py
backend/app/services/: budget_optimizer_service.py  chat_service.py  constraint_relaxation_service.py  conversation_memory.py  eval_service.py  feedback_service.py  gift_list_service.py  gift_plan_service.py  gift_shape_service.py  (+11 more)
src/: App.tsx
(+79 files in other folders)
