[project]
name = "jingli-ai-backend"
version = "0.1.0"
description = "FastAPI backend for the Jingli AI gift recommendation demo"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.1",
  "python-multipart>=0.0.9",
  "qdrant-client>=1.11.1",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.32",
  "tenacity>=8.5.0",
  "uvicorn[standard]>=0.30.6",
  "pypdf>=4.3.1",
  "python-docx>=1.1.2"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.1",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.2"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
